
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openapi-markdown"
version = "0.0.3"
authors = [
    { name="soonoh", email="soonoh.jung@vrerv.com" },
]
description = "Generates API documentation from an OpenAPI specification file"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only"
]

[project.urls]
"Homepage" = "https://github.com/vrerv/openapi-markdown"
"Bug Tracker" = "https://github.com/vrerv/openapi-markdown/issues"
