
[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "openapi-markdown"
version = "0.4.1"
authors = [
    { name="soonoh", email="soonoh.jung@vrerv.com" },
]
description = "Generates API documentation from an OpenAPI specification file"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only"
]
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.urls]
"Homepage" = "https://github.com/vrerv/openapi-markdown"
"Bug Tracker" = "https://github.com/vrerv/openapi-markdown/issues"

[project.scripts]
openapi2markdown = "openapi_markdown.bin.cli:main"
